sign up + sign in + categories + sub-categories pages

--- a/sign-up.html
+++ b/sign-up.html
@@ -57,7 +57,7 @@
                             <div class="form-group">
                                 <input type="password" placeholder="Password" class="form-control is-invalid r-0" id="password">
                                 <small id="password" name="password" class="form-text text-danger">The password must be grather than 5 caracters 
-                                    <a href="https://www.google.com" target="_blank">
+                                    <a href="https://privacycanada.net/strong-password-generator/" target="_blank">
                                         click here to set a strong password
                                     </a>
                                 </small>
