links page + retouching

--- a/links.html
+++ b/links.html
@@ -50,9 +50,8 @@
                                 User
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">General Settings</a>
-                                <a class="dropdown-item" href="categories-settings.php">Category Settings</a>
-                                <a class="dropdown-item" href="items-settings.php">Items Settings</a>
+                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" href="#">Settings</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Log out</a>
                             </div>
@@ -64,28 +63,20 @@
     </header>
 
 
-    <section class="sub-categories py-5 mb-5">
+    <section class="links py-5 mb-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <h2 class="text-center">Categories</h2>
-                    <hr>
-
-                </div>
-                <div class="col-md-3"></div>
-            </div>
-            <div class="categories mt-4">
-                <div class="row">
-                    <div class="col-md-3">
-                        <a href="category.php?category=9" class="card py-4 mt-3 category-card r-0">
-                            <div class="card-body text-center">
-                                <h5 class="card-title">
-                                    Image Tools
-                                </h5>
-                                <i class="fas fa-images fa-2x"></i>
-                            </div>
-                        </a>
+                <div class="col-md-3">
+                    <div class="card my-3 r-0">
+                        <img src="https://via.placeholder.com/500" class="card-img-top r-0" alt="...">
+                        <div class="card-body r-0">
+                            <h5 class="card-title">
+                                img compressor </h5>
+                            <a href="https://tinypng.com/" target="_blank" class="btn btn-primary r-0">
+                                Visit Link
+                            </a>
+                            <a class="btn btn-success r-0" href="https://api.whatsapp.com/send?text=img compressor : https://tinypng.com/" target="_blank"><i class="fas fa-share"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
