--- a/categories.html
+++ b/categories.html
@@ -64,7 +64,7 @@
     </header>
 
 
-    <section class="sign-up py-5 mb-5">
+    <section class="categories py-5 mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3"></div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-md-3"></div>
             </div>
-            <div class="categories mt-4">
+            <div class="categories-box mt-4">
                 <div class="row">
                     <div class="col-md-3">
                         <a href="category.php?category=9" class="card py-4 mt-3 category-card r-0">
