--- a/sign-in.html
+++ b/sign-in.html
@@ -37,7 +37,7 @@
     </nav>
 
 
-    <section class="sign-up py-5 mb-5">
+    <section class="sign-in py-5 mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3"></div>
