add dashboard pages

--- a/dashboard/links.html
+++ b/dashboard/links.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Moad Qarbal">
     <title>Savey</title>
 
-    <link rel="stylesheet" href="css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -87,11 +87,14 @@
                         <img src="https://via.placeholder.com/500" class="card-img-top r-0" alt="...">
                         <div class="card-body r-0">
                             <h5 class="card-title">
-                                img compressor </h5>
-                            <a href="https://tinypng.com/" target="_blank" class="btn btn-primary r-0">
-                                Visit Link
-                            </a>
-                            <a class="btn btn-success r-0" href="https://api.whatsapp.com/send?text=img compressor : https://tinypng.com/" target="_blank"><i class="fas fa-share"></i></a>
+                                img compressor
+                            </h5>
+                            <button class="btn btn-warning r-0" name="update">
+                                <i class="fas fa-pencil-alt text-white"></i>
+                            </button>
+                            <button class="btn btn-danger r-0" name="delete">
+                                <i class="fas fa-trash"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -166,8 +169,8 @@
 
 
 
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script src="../js/bootstrap.js"></script>
 </body>
 
 </html>
